# openet-forecast-analysis

./: .gitattributes  .gitignore  ETAnalysis.py  ETArg.py  ETFetch.py  ETPreprocess.py  ETRequest.py  ETUtils.py  FRET_analysis_kern.ipynb  FRET_analysis_monterey.ipynb  Kern.csv  Monterey.csv  Queue.py  README.md  api_compares.csv  boundaries.json  cdl_codes.csv  delete.csv  ee_stack.py  field_fetch.py  forecast_analysis.ipynb  forecast_merge.py  fret_auto_main.py  geo_fetch.py  huc8_locator.py  kern_analysis.ipynb  kern_polygon_historical_2024_avgs.csv  kern_polygon_large_historical_2024_avgs.csv  kern_polygon_large_historical_climatology.csv  main.py  match_window_grid.py  monterey_analysis.ipynb  monterey_forecast_table.csv  monterey_polygon_historical_2024_avgs.csv  monterey_polygon_large_historical_2024_avgs.csv  monterey_polygon_large_historical_climatology.csv  polygon_fetch.py  pytest.ini  pyvenv.cfg  requirements.txt  (+7 more)
data/: 1993 NEH Kcp.csv  Kern.csv  Monterey.csv  cdl_codes.csv  historical_data.csv  kern_historical.csv  kern_polygon_historical.csv  kern_polygon_large_historical.csv  kern_polygons.csv  kern_polygons_large.csv  kern_window_historical.csv  kern_worst_mae_fields.csv  monterey_historical.csv  monterey_historical_2024_avgs.csv  monterey_historical_climatology.csv  monterey_polygon_historical.csv  monterey_polygon_large_historical.csv  monterey_polygons.csv  monterey_polygons_large.csv  monterey_window_historical.csv  (+6 more)
package/: pyproject.toml
package/openet_gather/: __init__.py
package/openet_gather/src/: Arg.py  ETArg.py  Gather.py  Request.py
(+2055 files in other folders)
